<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PrimeiraActivity"
    tools:showIn="@layout/app_bar_primeira"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/etapa1"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/texto_etapa1"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="285dp">

        <EditText
            android:id="@+id/gsmEditText"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="0 - 24"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/ipEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analEditText"
            app:layout_constraintVertical_bias="0.652" />

        <EditText
            android:id="@+id/ipEditText"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="0 - 60"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gsmEditText"
            app:layout_constraintVertical_bias="0.933" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="185dp"
            android:layout_height="24dp"
            android:text="@string/troncos_ip"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.881" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="185dp"
            android:layout_height="28dp"
            android:text="@string/troncos_gsm"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.634" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="165dp"
            android:layout_height="26dp"
            android:text="@string/troncos_digital"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123" />

        <EditText
            android:id="@+id/digitalEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="0 - 60"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/analEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="185dp"
            android:layout_height="28dp"
            android:text="@string/troncos_analógicos"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.377" />

        <EditText
            android:id="@+id/analEditText"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="0 - 24"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/gsmEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digitalEditText"
            app:layout_constraintVertical_bias="0.652" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:onClick="continuar"
        android:text="@string/button_continuar" />

</LinearLayout>